--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "babel-preset-env": "^1.6.0",
     "express": "^4.16.2",
     "ignore-styles": "^5.0.1",
+    "material-ui": "^0.20.0",
     "morgan": "^1.9.0",
+    "omdb": "https://github.com/Belle-Epoque/omdb.git",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-helmet": "^5.2.0",
